--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>selenium-java</artifactId>
             <version>4.13.0</version>
         </dependency>
+
+        <!-- WebDriverManager Dependency -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
