--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <sonar.projectKey>maven-pro1</sonar.projectKey>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.login>${env.SONAR_TOKEN}</sonar.login>
+        <!-- Path for the JaCoCo XML report -->
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
